# bintail

./: CMakeLists.txt  README.md
samples/: bss-nolib.c  mvcommit.c  no-lib.c  simple.c
src/: CMakeLists.txt  bintail.cc  bintail.cpp  bintail_test.cc  elf.cc  elf.cpp  elf.h  elf_test.cc  main.cc  main.cpp  mvelem.cc  mvelem.cpp  mvelem.h  mvelem.hpp  mvscn.cc  mvscn.cpp  test_bintail.cpp  test_elf.cpp
src/include/bintail/: bintail.hpp
